Revitalize image support by bundling images
Fix link rot and make it future proof by bundling image files instead of relying on random URLs on the web.

Got a fresh batch of images from google images, removed duplicates with a tool called findimagedupes and a script similar to:

	mkdir ToDelete

	function removeone {
		size1=$(stat -c%s "${file1}")
		size2=$(stat -c%s "${file2}")
		smaller=$file1
		larger=$file2
		if [[ "$size2" -lt "$size1" ]]; then
			smaller=$file2
			larger=$file1
		fi
		#mv "$larger" "$smaller.bigger" # for comparison in file browser, with alphabetical sorting
		mv "$larger" ToDelete # for safety
		#rm "$larger" # immediate delete
	}

findimagedupes supports scripting, but I just hacked together a script using multi-line editing to manipulate its output into a series of bash function calls like so:

	file1="/home/io/Projects/sbahjifier/many-images/images47.jpg"
	file2="/home/io/Projects/sbahjifier/many-images/sbahj.png"
	removeone
	file1="/home/io/Projects/sbahjifier/many-images/images6.jpg"
	file2="/home/io/Projects/sbahjifier/many-images/5N2N48C.jpg"
	removeone

and manually handling three-way cases (image triplicates).
And then removed a bunch of them manually, but probably not enough of them.

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,12 @@
     "tabs",
     "<all_urls>"
   ],
-
+  "web_accessible_resources": [
+    "many-images/*",
+    "rii.jpg",
+    "awyeahbitches.gif",
+    "whurr.png"
+  ],
   "browser_action": {
     "default_title": "SBAHJify!",
     "default_popup": "popup.html",
