--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,32 @@
 {
-  "name": "SBAHJifier",
-  "description": "Make any page look like SWEET BRO AND HELLA JEFF.",
-  "version": "1.0.2",																							"icons": { "16": "icon16.png",
-																														   "19": "icon19.png",
-																														   "38": "icon38.png",
-																														   "48": "icon48.png",
-																														  "128": "icon128.png"	},
-  "permissions": [
-    "activeTab"
-  ],
-  "web_accessible_resources": [
-    "many-images/*",
-    "comic-sans.woff",
-    "comic-sans.ttf",
-    "rii.jpg",
-    "awyeahbitches.gif",
-    "whurr.png"
-  ],
-  "browser_action": {
-    "default_title": "SBAHJify!",
-    "default_popup": "popup.html",
-	"default_icon":	{ "19": "icon19.png",
-					  "38": "icon38.png" }
-  },
-
-  "manifest_version": 2
+	"name": "SBAHJifier",
+	"description": "Make any page look like SWEET BRO AND HELLA JEFF.",
+	"version": "1.0.2",
+	"icons": {
+		"16": "icon16.png",
+		"19": "icon19.png",
+		"38": "icon38.png",
+		"48": "icon48.png",
+		"128": "icon128.png"
+	},
+	"permissions": [
+		"activeTab"
+	],
+	"web_accessible_resources": [
+		"many-images/*",
+		"comic-sans.woff",
+		"comic-sans.ttf",
+		"rii.jpg",
+		"awyeahbitches.gif",
+		"whurr.png"
+	],
+	"browser_action": {
+		"default_title": "SBAHJify!",
+		"default_popup": "popup.html",
+		"default_icon": {
+			"19": "icon19.png",
+			"38": "icon38.png"
+		}
+	},
+	"manifest_version": 2
 }
