--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "SBAHJifier",
 	"description": "Make any page look like SWEET BRO AND HELLA JEFF.",
-	"version": "1.0.2",
+	"version": "1.1.0",
+	"homepage_url": "https://github.com/1j01/sbahjifier",
 	"icons": {
 		"16": "icon16.png",
 		"19": "icon19.png",
